--- a/utilities/magick-cache.1
+++ b/utilities/magick-cache.1
@@ -1,18 +1,18 @@
 .TH magick-cache 1 "Date: 2021/01/10 01:00:00" "ImageMagick"
 .SH NAME
-magick \- convert between image formats as well as resize an image, blur, crop, despeckle, dither, draw on, flip, join, re-sample, and much more.
+magick-cache \- The Magick Cache stores and retrieves images efficiently within milliseconds with a small memory footprint.
 .SH SYNOPSIS
 .TP
-\fBmagick\fP [\fIinput-options\fP] \fIinput-file\fP [\fIoutput-options\fP] \fIoutput-file\fP
+\fBmagick-cache\fP \fIcreate\fP \fIpath\fP
+\fBmagick-cache\fP [\fI-key passphrase\fP] [\fIdelete | expire | list\fP] [\fIpath\fP] \fIiri\fP
+\fBmagick-cache\fP [\fI-key passphrase\fP] [\fI-ttl time\fP [\fIget | put | list\fP] [\fIpath\fP] \fIiri\fP \fIfilename\fP
 .SH OVERVIEW
-The \fBmagick\fP program is a member of the ImageMagick(1) suite of tools.  Use it to convert between image formats as well as resize an image, blur, crop, despeckle, dither, draw on, flip, join, re-sample, and much more.  
+magick-cache \- stores and retrieves images efficiently within milliseconds with a small memory footprint. In addition to images, you can store video, audio, and associated properties. The cache supports virtually unlimited content upwards of billions of images making it suitable as a web image service.
 
-For more information about the magick command, point your browser to file://@DOCUMENTATION_PATH@/www/magick.html or http://imagemagick.org/script/magick.php.
+For more information about the magick command, point your browser to file://@DOCUMENTATION_PATH@/www/magick-cache.html or http://imagemagick.org/script/magick-cache.php.
 .SH DESCRIPTION
-  \-decipher filename   magick cipher pixels to plain pixels
-  \-define format:option
-                       define one or more image format options
-Use any setting or operator as an \fIoutput-option\fP.  Only a limited number of setting are  \fIinput-option\fP. They include: \-antialias, \-caption, \-density, \-define, \-encoding, \-font, \-pointsize, \-size, and \-texture as well as any of the miscellaneous options.
+  \-key passphrase API key
+  \-ttl time       time to live in seconds of neumonics, e.g. "2 days"
 
 .SH COPYRIGHT
 \fBCopyright (C) 1999-2021 ImageMagick Studio LLC. Additional copyrights and licenses apply to this software, see file://@DOCUMENTATION_PATH@/www/license.html or http://imagemagick.org/script/license.php\fP
