--- a/utilities/magick-cache.1
+++ b/utilities/magick-cache.1
@@ -4,17 +4,17 @@ magick-cache \- The Magick Cache stores and retrieves images efficiently within 
 .SH SYNOPSIS
 .TP
 \fBmagick-cache\fP \fIcreate\fP \fIpath\fP
-\fBmagick-cache\fP [\fI-key passphrase\fP] [\fIdelete | expire | list\fP] [\fIpath\fP] \fIiri\fP
-\fBmagick-cache\fP [\fI-key passphrase\fP] [\fI-ttl time\fP] [\fI-extract geometry\fP] get [\fIpath\fP] \fIiri\fP \fIfilename\fP
-\fBmagick-cache\fP [\fI-key passphrase\fP] [\fI-ttl time\fP put \fIpath\fP \fIiri\fP \fIfilename\fP
+\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIdelete | expire | list\fP] [\fIpath\fP] \fIiri\fP
+\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-ttl time\fP] [\fI-extract geometry\fP] get [\fIpath\fP] \fIiri\fP \fIfilename\fP
+\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-ttl time\fP put \fIpath\fP \fIiri\fP \fIfilename\fP
 .SH OVERVIEW
 magick-cache \- store and retrieve images efficiently within milliseconds with a small memory footprint. In addition to images, you can store video, audio, and associated properties. The cache supports virtually unlimited content upwards of billions of images making it suitable as a web image service.
 
 For more information about the magick command, point your browser to file://@DOCUMENTATION_PATH@/www/magick-cache.html or http://imagemagick.org/script/magick-cache.php.
 .SH DESCRIPTION
-  \-extract geometry extract or resize the image
-  \-key passphrase   cache key
-  \-ttl time         time to live in seconds of neumonics, e.g. "2 days"
+  \-cache-key passkey cache key passkey file
+  \-extract geometry  extract or resize the image
+  \-ttl time          time to live in seconds of neumonics, e.g. "2 days"
 
 .SH COPYRIGHT
 \fBCopyright (C) 1999-2021 ImageMagick Studio LLC. Additional copyrights and licenses apply to this software, see file://@DOCUMENTATION_PATH@/www/license.html or http://imagemagick.org/script/license.php\fP
