--- a/utilities/magick-cache.1
+++ b/utilities/magick-cache.1
@@ -3,8 +3,8 @@
 magick-cache \- The Magick Cache stores and retrieves images efficiently within milliseconds with a small memory footprint.
 .SH SYNOPSIS
 .TP
-\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIcreate\fP | \fIdelete\fP | \fIlist\fP] \fIpath\fP
-\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIdelete | expire | identify\fP] [\fIpath\fP] \fIiri\fP
+\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIcreate\fP | \fIdelete\fP] \fIpath\fP
+\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIdelete | expire | identify | list\fP] [\fIpath\fP] \fIiri\fP
 \fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-cipher-key passkey.txt\fP] [\fI-ttl time\fP] [\fI-extract geometry\fP] get [\fIpath\fP] \fIiri\fP \fIfilename\fP
 \fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-ttl time\fP put \fIpath\fP \fIiri\fP \fIfilename\fP
 .SH OVERVIEW
