--- a/utilities/magick-cache.1
+++ b/utilities/magick-cache.1
@@ -3,16 +3,16 @@
 magick-cache \- The Magick Cache stores and retrieves images efficiently within milliseconds with a small memory footprint.
 .SH SYNOPSIS
 .TP
-\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIcreate\fP | \fIdelete\fP] \fIpath\fP
-\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fIdelete | expire | identify | list\fP] [\fIpath\fP] \fIiri\fP
-\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-cipher-key passkey.txt\fP] [\fI-ttl time\fP] [\fI-extract geometry\fP] get [\fIpath\fP] \fIiri\fP \fIfilename\fP
-\fBmagick-cache\fP [\fI-cache-key passkey.txt\fP] [\fI-ttl time\fP put \fIpath\fP \fIiri\fP \fIfilename\fP
+\fBmagick-cache\fP [\fI-passkey filename\fP] [\fIcreate\fP | \fIdelete\fP] \fIpath\fP
+\fBmagick-cache\fP [\fI-passkey filename\fP] [\fIdelete | expire | identify | list\fP] [\fIpath\fP] \fIiri\fP
+\fBmagick-cache\fP [\fI-passkey filename\fP] [\fI-cipher-key filename\fP] [\fI-ttl time\fP] [\fI-extract geometry\fP] get [\fIpath\fP] \fIiri\fP \fIfilename\fP
+\fBmagick-cache\fP [\fI-passkey filename\fP] [\fI-cipher-key filename\fP] [\fI-ttl time\fP put \fIpath\fP \fIiri\fP \fIfilename\fP
 .SH OVERVIEW
 magick-cache \- store and retrieve images efficiently within milliseconds with a small memory footprint. In addition to images, you can store video, audio, and associated properties. The cache supports virtually unlimited content upwards of billions of images making it suitable as a web image service.
 
 For more information about the magick command, point your browser to file://@DOCUMENTATION_PATH@/www/magick-cache.html or http://imagemagick.org/script/magick-cache.php.
 .SH DESCRIPTION
-  \-cache-key passkey cache key passkey file
+  \-passkey passkey cache key passkey file
   \-extract geometry  extract or resize the image
   \-ttl time          time to live in seconds of neumonics, e.g. "2 days"
 
