--- a/utilities/magick-cache.1
+++ b/utilities/magick-cache.1
@@ -24,4 +24,4 @@ For more information about the magick-cache command, point your browser to file:
   \-ttl time              time to live in seconds of neumonics, e.g. "2 days"
 
 .SH COPYRIGHT
-\fBCopyright (C) 1999-2021 ImageMagick Studio LLC. Additional copyrights and licenses apply to this software, see file://@DOCUMENTATION_PATH@/www/license.html or http://imagemagick.org/script/license.php\fP
+\fBCopyright @ 1999 ImageMagick Studio LLC. Additional copyrights and licenses apply to this software, see file://@DOCUMENTATION_PATH@/www/license.html or http://imagemagick.org/script/license.php\fP
