--- a/utilities/magick-cache.1
+++ b/utilities/magick-cache.1
@@ -21,7 +21,7 @@ For more information about the magick-cache command, point your browser to file:
   \-passkey passkey       passkey file
   \-passphrase passphrase passphrase file
   \-extract geometry      extract or resize the image
-  \-ttl time              time to live in seconds of neumonics, e.g. "2 days"
+  \-ttl time              time to live in seconds or neumonics, e.g. "2 days"
 
 .SH COPYRIGHT
 \fBCopyright @ 1999 ImageMagick Studio LLC. Additional copyrights and licenses apply to this software, see file://@DOCUMENTATION_PATH@/www/license.html or http://imagemagick.org/script/license.php\fP
